@@ -1,3 +1,12 @@
+ FLa4a 1.9.x:
+
+ NEW FEATURES
+- plot for residuals by age
+- multisca method to run several sca
+
+ BUG FIXES:
+- sca use of covariates fixed
+
  FLa4a 1.8.x:
 
  NEW FEATURES
